--- a/settings.gradle
+++ b/settings.gradle
@@ -3,9 +3,9 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
-        jcenter() // Warning: this repository is going to shut down soon
     }
 }
 rootProject.name = "Alan TV"
 include ':mobile'
 include ':tv'
+include ':core'
