--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,24 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext.kotlin_version = "1.4.30"
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.3"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
+}
+
+
+ext {
+    glide_version = '4.12.0'
+    retrofit = "2.7.1"
+    daggerComp= "2.27"
+    daggerVersion = "2.30.1"
+    room = "2.2.6"
+    coroutines = '1.3.7'
 }
 
 task clean(type: Delete) {
